# app1

./: .#GEMINI.md  .gitignore  GEMINI.md  README.md  pyproject.toml
.serena/: project.yml
.serena/memories/: brownfield_detection.md  code_style.md  codebase_structure.md  customize_workflow_q1.md  customize_workflow_q2.md  customize_workflow_q3.md  error_message.md  generate_product_guide_q1.md  generate_product_guide_q2.md  generate_product_guide_q3.md  generate_product_guidelines_q1.md  generate_product_guidelines_q3.md  manual_verification_plan.md  manual_verification_plan_final.md  manual_verification_plan_re_check.md  phase_1_verification_start.md  pi0disp_spec_inquiry.md  project_purpose.md  propose_initial_track.md  select_code_styleguides_q1.md  select_workflow_q1.md  start_track_implementation.md  suggested_commands.md  tech_stack.md  tech_stack_confirmation.md  user_custom_answer_q3.md  welcome_message.md  what_to_do_when_task_completed.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/core_breakout_20241224/: metadata.json  plan.md  spec.md
src/app1/: __init__.py
tests/: test_display_init.py
